<resources>
    <string name="app_name">ReadRush</string>
    <string name="app_google_play_store_link">https://play.google.com/store/apps/details?id=com.appbusters.robinkamboj.senseitall</string>
    <string name="app_market_link">https://play.google.com/store/apps/details?id=com.appbusters.robinkamboj.senseitall</string>
    <string name="some_error">Some Error Has Occurred</string>
    <string name="api_default_error">api error</string>
    <string name="connection_error">Connection Error</string>
    <string name="api_retry_error">API Retry Error</string>

    <!-- DUMMY TEXT -->
    <string name="dummy_text">This Is Dummy Text</string>
    <string name="tag_line">Book Summaries In 25 Minutes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dummy_header1">Capture</string>
    <string name="dummy_header2">Revise</string>
    <string name="dummy_header3">Decide</string>
    <string name="dummy_header4">Audio-Summary</string>

    <string name="header_one_desc">Get acquainted with the key ideas of the book</string>
    <string name="header_two_desc">Refresh your learnings of a book you read a long ago</string>
    <string name="header_three_desc">Helps you decide whether the book is worth buying</string>
    <string name="header_four_desc">Learning on-the-go</string>

    <string name="header_five_desc">I would never read a book if it were possible for me to talk half an hour with the man who wrote it.</string>
    <string name="dummy_header">The Dummy Header</string>
    <string name="dummy_header5">Half an hour</string>
    <string name="dummy_sentence">The Dummy Header has a dummy sentence that comes with it.</string>

    <!-- READ RUSH ACTIVITY -->
    <string name="increase_text_size">Increase Text Size</string>
    <string name="decrease_text_size">Decrease Text Size</string>
    <string name="change_font">Change Font</string>
    <string name="change_theme">Change Theme</string>
    <string name="text_line_spacing">Text Line Spacing</string>
    <string name="change_content_padding">Change Content Padding</string>

    <!-- APP TEXT -->
    <string name="line">line</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="fragment_image">Fragment Image</string>
    <string name="finish">Finish</string>
    <string name="app_icon">App Icon</string>
    <string name="sample_email">abcdefgh@gmail.com</string>

    <!-- LOGIN ADA-LIKE STRING CONVERSATIONS -->

    <string-array name="ken_text_initial">
        <item>Hi, I am Ken. I can help you learn something useful in a very short span of time.</item>
        <item>Have we met before?</item>
    </string-array>

    <string-array name="chat_edit_text_hint_initial">
        <item>NULL</item>
        <item>NULL</item>
    </string-array>

    <string-array name="chat_primary_initial">
        <item>Okay</item>
        <item>Yes</item>
    </string-array>

    <string-array name="chat_secondary_initial">
        <item>NULL</item>
        <item>No</item>
    </string-array>

    <string-array name="ken_text_login">
        <item>Hi, I am Ken. I can help you learn something useful in a very short span of time.</item>
        <item>Have we met before?</item>
        <item>Please give us your email Id.</item>
        <item>Please give us your password.</item>
    </string-array>

    <string-array name="chat_edit_text_hint_login">
        <item>NULL</item>
        <item>NULL</item>
        <item>@string/sample_email</item>
        <item>Test123@</item>
    </string-array>

    <string-array name="chat_primary_login">
        <item>Okay</item>
        <item>Yes</item>
        <item>Done</item>
        <item>Done</item>
    </string-array>

    <string-array name="chat_secondary_login">
        <item>NULL</item>
        <item>No</item>
        <item>NULL</item>
        <item>NULL</item>
    </string-array>

    <string-array name="ken_text_register">
        <item>Hi, I am Ken. I can help you learn something useful in a very short span of time.</item>
        <item>Have we met before?</item>
        <item>Pleased to meet you. To keep your data safe, we need to set you up a private account.</item>
        <item>You can always change your answer by tapping on it.</item>
        <item>Please give us your email Id.</item>
        <item>Now, set up a strong password to keep your account safe.</item>
        <item>Almost there! \nThe more you tell me, the smarter I get. So I am going to ask you a few questions that will help me personalise the content for you.</item>
        <item>Great! What is your name?</item>
        <item>OK mile, you can start by telling me your preferences of books.</item>
    </string-array>

    <string-array name="chat_edit_text_hint_register">
        <item>NULL</item>
        <item>NULL</item>
        <item>NULL</item>
        <item>NULL</item>
        <item>@string/sample_email</item>
        <item>Test123@</item>
        <item>NULL</item>
        <item>Elon Musk</item>
        <item>NULL</item>
    </string-array>

    <string-array name="chat_primary_register">
        <item>Okay</item>
        <item>Yes</item>
        <item>Okay</item>
        <item>Okay</item>
        <item>Done</item>
        <item>Done</item>
        <item>Okay</item>
        <item>Done</item>
        <item>Okay</item>
    </string-array>

    <string-array name="chat_secondary_register">
        <item>NULL</item>
        <item>No</item>
        <item>NULL</item>
        <item>NULL</item>
        <item>NULL</item>
        <item>NULL</item>
        <item>NULL</item>
        <item>NULL</item>
        <item>NULL</item>
    </string-array>

    <string-array name="preferences">
        <item>Science</item>
        <item>Psychology</item>
        <item>Economics</item>
        <item>Biography and Autobiography</item>
        <item>Motivational/Self help</item>
        <item>Leadership and Management</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="library">LIBRARY</string>
    <string name="discover">DISCOVER</string>
    <string name="profile">PROFILE</string>
    <string name="search">Search</string>
    <string name="add_rush">Add Rush</string>
    <string name="read_rush">Read Rush</string>
    <string name="results">Search Results</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vulputate felis sit amet consequat interdum. Nulla facilisi. Aliquam erat volutpat. Nunc id felis lacinia, lacinia lectus id, pellentesque nibh. Morbi justo tortor, lacinia ut turpis vitae, venenatis finibus diam. Curabitur et ipsum non magna dignissim semper. Morbi nec turpis eu nisl faucibus aliquet. In feugiat, lectus a vehicula molestie, nunc lectus dignissim mi, eu pharetra magna augue et metus. Nunc non dignissim velit. Nunc ex purus, bibendum dictum felis ut, porta posuere libero.

Quisque aliquam lacus id sapien vehicula, et suscipit nibh rutrum. Nunc non dolor et leo dignissim commodo a eget ex. Nullam consequat nulla erat, eget ultrices urna hendrerit at. Sed libero dolor, hendrerit sed faucibus at, posuere ut justo. Aliquam et maximus est. Vivamus dapibus dolor lorem, sed tempus nulla iaculis sed. Etiam non pulvinar lorem, porta pellentesque urna. Vivamus odio enim, dapibus et lorem sed, scelerisque blandit sapien. Phasellus ultrices sodales elit et scelerisque. Nullam eu ipsum nec leo porta molestie. Nunc rhoncus, enim ac bibendum pellentesque, lorem metus varius quam, eget maximus nisi urna at augue. Morbi suscipit ut magna ac laoreet. Integer velit ex, efficitur a ligula at, aliquet ultrices mi. Proin sagittis consectetur nisl, in egestas est vulputate vel.

In diam libero, congue quis elementum at, facilisis sed libero. Mauris justo ex, efficitur eleifend venenatis et, tristique sed purus. Nam eget augue at nisi sollicitudin varius. Donec commodo, nisi sed semper placerat, est magna lobortis purus, et ornare augue dui sit amet tortor. Vestibulum rhoncus sodales tincidunt. Duis massa enim, fringilla vel condimentum vitae, varius in risus. Donec magna ipsum, volutpat et malesuada sed, eleifend vel risus. Cras vitae urna tristique, scelerisque orci a, dictum mauris. Suspendisse varius pellentesque enim sed dignissim.

Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam luctus eros venenatis felis blandit, id dignissim lectus blandit. Nulla laoreet vehicula diam, sed gravida augue lacinia sed. Sed sed tempus massa, eu ultrices urna. Donec suscipit diam ipsum, sed maximus neque elementum vel. Donec sollicitudin tincidunt ultrices. Praesent eu ullamcorper neque, at accumsan velit. Nam consequat nisl massa, vel dignissim neque tincidunt non. In eu iaculis tortor. Nunc pretium, nulla a consectetur bibendum, elit nisi luctus libero, non sollicitudin lectus nisl eget velit. Mauris ut erat scelerisque, consequat tortor eget, lacinia ipsum. Mauris ut turpis nec nibh tristique ornare ac sit amet sem. Nunc magna eros, tempor id pellentesque nec, vulputate id metus. Quisque et sagittis enim, vitae blandit orci. Aliquam in mi tellus. Aenean fermentum varius erat, nec egestas neque mattis vel.</string>
    <string name="reading_zero">Reading: 0</string>
    <string name="read_zero">Read: 0</string>

</resources>
