<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.robillo.readrush.ui.onboard.Activity.OnboardActivity">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/pager"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@drawable/line_gradient"
        tools:ignore="SmallSp"
        android:contentDescription="@string/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous"
            tools:ignore="MissingPrefix"
            fontPath="fonts/four.ttf"
            android:textStyle="bold"
            android:padding="15sp"
            android:textSize="25sp"
            style="?attr/buttonBarButtonStyle"
            android:textColor="@color/readBlack"
            android:id="@+id/prev"/>

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            tools:ignore="MissingPrefix"
            fontPath="fonts/four.ttf"
            android:textStyle="bold"
            android:padding="15sp"
            android:textSize="25sp"
            style="?attr/buttonBarButtonStyle"
            android:textColor="@color/rushRed"
            android:id="@+id/next"/>

    </LinearLayout>

</LinearLayout>
