<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.robillo.readrush.ui.onboard.fragment.OnboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:padding="20sp"
            android:layout_gravity="bottom|center_horizontal"
            android:contentDescription="@string/fragment_image"
            tools:src="@drawable/capture" />

        <!--android:background="@color/colorPrimaryDark"-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dummy_header1"
            android:textSize="35sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:id="@+id/header"/>

        <!--app:animationDuration="3000"-->
        <!--app:lineColor="@color/readBlack"-->
        <!--app:lineWidth="4dp"-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_sentence"
            android:gravity="center_horizontal"
            android:padding="25sp"
            android:textSize="23sp"
            android:textColor="@color/colorTextTwo"
            android:id="@+id/description"/>

        <!--tools:ignore="MissingPrefix"-->
        <!--fontPath="fonts/four.ttf"-->

    </LinearLayout>

</LinearLayout>
